--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nestjs/common": "^11.1.6",
     "@nestjs/core": "^11.1.6",
     "@nestjs/platform-express": "^11.1.6",
+    "@nestjs/schedule": "^6.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@prisma/client": "^6.16.2",
     "axios": "^1.12.2",
@@ -37,9 +38,9 @@
     "@types/node": "^24.5.2",
     "eslint": "^8.45.0",
     "nodemon": "^3.1.10",
+    "prettier": "^3.0.0",
     "prisma": "^6.16.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2",
-    "prettier": "^3.0.0"
+    "typescript": "^5.9.2"
   }
 }
