--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@nestjs/cli": "^11.2.0",
     "@nestjs/schematics": "^11.1.6",
+    "@types/cron": "^2.4.3",
     "@types/express": "^5.0.3",
     "@types/node": "^24.5.2",
     "eslint": "^8.45.0",
