--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prisma:studio": "prisma studio"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^11.1.6",
     "@nestjs/core": "^11.1.6",
     "@nestjs/platform-express": "^11.1.6",
@@ -26,6 +27,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.2",
+    "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
@@ -37,6 +39,7 @@
     "@types/cron": "^2.4.3",
     "@types/express": "^5.0.3",
     "@types/node": "^24.5.2",
+    "@types/node-fetch": "^2.6.13",
     "eslint": "^8.45.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.0.0",
